--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
     <!-- Put here your site title -->
     <title>Rajan Srimat | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[username], [name], Java, c++, Python, Full Stack" />
     <!-- Improve your SEO by adding a small descrption of you -->
     <meta name="description" content="Rajan Srimat Software Developer" />
 
@@ -35,7 +35,7 @@
     </script>
 
     <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
   </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
@@ -79,11 +79,12 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Hey! Welcome to to my profile! So here are some things I would like to share about me.
+                I was born in India and moved here when I was 3. Some of my hobbies are Rock ciimbing, working out, gaming, and reading. I was
+                I am a pretty big Marvel fan. I love adventure and learning new things.
               </p>
-              <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+              <p class="about-wrapper__info-text--important">
+                If you have any cool projects you want me to try please let me know and I'll do my best to get a working prototype
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -115,11 +116,9 @@
                 <h3 class="project-wrapper__text-title">Full Stack Facial Recognition Application</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A Full Stack project using React Js as a framework, ClarifAi for the Face recognition Model,
+                    Node.Js and Express.Js for the application API, and PostgreSQL for the database. 
+                    All deployed and hosted on Heroku: Cloud Application Platform
                   </p>
                 </div>
                 <a
@@ -142,7 +141,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://facerecai.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded js-tilt">
                     <img
                       alt="Project Image"
@@ -160,21 +159,18 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">RoboNet Quick Search</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This project is a Realtime search function on database of profiles. 
+                    The list of available profiles are updated everytime there is a change in the search bar.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://6586rajan.github.io/RoboNet/"
                 >
                   See Live
                 </a>
@@ -182,7 +178,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/6586rajan/RoboNet"
                 >
                   Source Code
                 </a>
@@ -190,12 +186,12 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://6586rajan.github.io/RoboNet/" target="_blank">
                   <div data-tilt class="thumbnail rounded js-tilt">
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project2.jpg"
                     />
                   </div>
                 </a>
@@ -205,7 +201,7 @@
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Project Title 2</h3>
@@ -249,7 +245,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- /END Project -->
         </div>
       </div>
@@ -261,13 +257,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Let's talk</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:6586rajan@gmail.com"
+            >Contact</a
           >
         </div>
       </div>
@@ -298,15 +294,15 @@
         <hr />
 
         <!-- If you give me some credit, will be huge for me :) -->
-        <p class="footer__text">
+        <!-- <p class="footer__text">
           © 2021 - Template developed by
           <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
             >Jacobo Martínez</a
           >
-        </p>
+        </p> -->
 
         <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
+        <!-- <p class="mt-3 pt-3">
           <a
             rel="noreferrer"
             class="github-button"
@@ -327,7 +323,7 @@
             aria-label="Star cobidev/simplefolio on GitHub"
             >Star</a
           >
-        </p>
+        </p> -->
       </div>
     </footer>
     <!-- /END Footer Section -->
