--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -65,15 +54,23 @@
         <h2 class="section-title">About me</h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__image">
-              <img
+            <div class="about-wrapper__image" id="slider">
+              <ul id="slideWrap"> 
+                <li><img class="img-fluid rounded shadow-lg" src="assets/pic1.jpg" alt=""></li>
+                <li><img class="img-fluid rounded shadow-lg" src="assets/pic2.jpg" alt=""></li>
+                <li><img class="img-fluid rounded shadow-lg" src="assets/pic3.jpg" alt=""></li>
+                <li><img class="img-fluid rounded shadow-lg" src="assets/pic4.jpg" alt=""></li>
+              </ul>
+              <a id="prev">&#8810;</a>
+              <a id="next">&#8811;</a>
+              <!-- <img
                 alt="Profile Image"
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
                 src="assets/profile.jpg"
                 alt="Profile Image"
-              />
+              /> -->
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -84,7 +81,8 @@
                 I am a pretty big Marvel fan. I love adventure and learning new things.
               </p>
               <p class="about-wrapper__info-text--important">
-                If you have any cool projects you want me to try please let me know and I'll do my best to get a working prototype
+                If you have any cool projects you want me to try please let me know and I'll do my best to get a working prototype.
+                click below for my resume.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -277,16 +275,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+          <a rel="noreferrer" href="https://www.instagram.com/6586rajan/" target="_blank">
+            <i class="fa fa-instagram fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <!-- <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          </a> -->
+          <a rel="noreferrer" href="https://github.com/6586rajan" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
